Envoy/envoy copy.yaml
admin:
    address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address: { address: 0.0.0.0, port_value: 8000 }
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: ingress_http
                          codec_type: AUTO
                          access_log:
                              - name: envoy.access_loggers.file
                                typed_config:
                                    json_format:
                                        mapping:
                                            protocol: "%PROTOCOL"
                                            duration: "%DURATION"
                                            request_method: "%REQ(:METHOD)%"
                                    path: "/tmp/access.log"
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ["*"]
                                    # retry policy applied to all routes, note: route specific retry policy will overwrite the global configuration
                                    retry_policy:
                                        { num_retries: 3, per_try_timeout: 5s }
                                    routes:
                                        - match: { prefix: "/weather" }
                                          route:
                                              {
                                                  prefix_rewrite: "/weatherforecast",
                                                  cluster: simple_service,
                                              }
                                        # - match: { prefix: "/ddg" }
                                        #   route:
                                        #       cluster: ddg_service
                                        - match: { prefix: "/binance" }
                                          #query_parameters:
                                          #    {
                                          #        name: "symbol",
                                          #        string_match: "BTCUSDT",
                                          #    },
                                          route:
                                              {
                                                  prefix_rewrite: "/api/v3/time",
                                                  cluster: binance_service,
                                              }
                                        - match: { prefix: "/customer" }
                                          route:
                                              {
                                                  prefix_rewrite: "/api/customer",
                                                  cluster: ossapi_service,
                                              }

                          http_filters:
                              - name: envoy.filters.http.router

    clusters:
        - name: simple_service
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: weather_service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: simpleapi
                                      port_value: 80
        - name: binance_service
          connect_timeout: 5s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: binance_service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: api.binance.com
                                      port_value: 443
          #health_checks:
          #    {
          #        timeout: 4s,
          #        interval: 10s,
          #        unhealthy_threshold: 2,
          #        healthy_threshold: 1,
          #    }
        - name: ossapi_service
          connect_timeout: 5s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: ossapi_service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: ossapi
                                      port_value: 80
        - name: ddg_service
          connect_timeout: 10s
          type: LOGICAL_DNS
          dns_lookup_family: V4_ONLY
          load_assignment:
              cluster_name: ddg_service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: www.duckduckgo.com
                                      port_value: 443
          transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                  "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
                  sni: www.duckduckgo.com
