Envoy/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/weather" }
                route: { prefix_rewrite: "/weatherforecast", cluster: simple_service}
              - match: 
                  prefix: "/"
                route: 
                  host_rewrite_literal: www.duckduckgo.com
                  cluster: ddg_service 
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: simple_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: weather_service 
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: simpleapi
                port_value: 80
  - name: ddg_service
    connect_timeout: 10s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: ddg_service
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: www.duckduckgo.com
                  port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.duckduckgo.com
